test/type-error-3.err.expect
test/type-error-3.ktn:3:1: error: cannot match scalar type char with [char]
test/type-error-3.ktn:3:9: note: char (type of x) is from here
test/type-error-3.ktn:3:9: note: [char] (input to baq) is from here
